# realmate-challenge

./: README.md  pyproject.toml
api/: apps.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/templates/: conversation_detail.html  conversations.html
messages_api/: models.py  serializers.py  views.py
messages_api/migrations/: 0001_initial.py
realmate_challenge/: settings.py  urls.py
